<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Suspicious Apps Checker</string>
    <string name="LaunchButton">Launch</string>
    <string name="AppInfoButton">Info</string>
    <string name="AnalyzeButton">Analyze</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Blabla</string>
    <string name="title_activity_detail">App Info</string>

    <!-- Main activity -->
    <string name="action_open_app">Launch</string>
    <string name="action_detail_app">Detail</string>

    <!-- Detail activity -->
    <string name="label_package_name">Package name:</string>
    <string name="label_class_name">Class name:</string>
    <string name="label_process_name">Process name:</string>
    <string name="label_version_name">Version name:</string>
    <string name="label_version_code">Version code:</string>
    <string name="label_sdk_version">Target SDK :</string>
    <string name="label_install_date">Install date:</string>
    <string name="label_last_update">Last update:</string>
    <string name="label_source_directory">Source directory:</string>
    <string name="label_data_directory">Data directory:</string>
    <string name="label_permissions">Permissions:</string>
    <string name="label_flags">Flags:</string>
    <string name="label_no_permissions">No permissions</string>
    <string name="Analyze_appButton">Analysis</string>

     <!-- Analysis activity -->
     <string name="label_list_of_permissions">Permisions List:</string>
     <string name="label_unsafe_permissions">Suspicious perm.:</string>  
     <string name="label_choosed_category">Category:</string>
     <string name="label_score">Risk:</string>
     
    
    <!-- Category list -->
    <string name="label_Category">Category:</string>

    <string-array name="category_array">
        <item>Games</item>
        <item>Communication</item>
        <item>Entertainment</item>
        <item>Finance</item>
        <item>Health</item>
        <item>Lifestyle</item>
        <item>Multimedia</item>
        <item>Productivity</item>
        <item>Shopping</item>
        <item>Social</item>
        <item>Sports</item>
        <item>Themes</item>
        <item>Tools</item>
        <item>Travel</item>
    </string-array>

    <string name="title_activity_analysis">App Analysis</string>
    <string name="title_analysis_detail">Analysis detail</string>
    <string name="threadLvl1">No threat</string>
    <string name="threadLvl2">Minimum risk</string>
    <string name="threadLvl3">Several vulnerabilities</string>
    <string name="threadLvl4">Dangerous app</string>
    <string name="threadLvl5">Security suicide</string>
    <string name="label_no_categories">No category</string>
    <string name="label_sha1hash">SHA1:</string>

</resources>